# writing-schedule-py

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml
docs/: Makefile  api.md  cli.md  conf.py  daylight-saving.md  index.md  org-format.md  tutorial.md
docs/_build/html/: .buildinfo  api.html  cli.html  daylight-saving.html  development.html  genindex.html  index.html  installation.html  library.html  objects.inv  org-format.html  py-modindex.html  search.html  searchindex.js  tutorial.html
docs/_build/html/.doctrees/: api.doctree  cli.doctree  daylight-saving.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  library.doctree  org-format.doctree  tutorial.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/writing_schedule/: archive.html  cli.html  config.html  ics.html  model.html  orgtable.html  parser.html  schedule.html  sheet.html  sheet_common.html  sheet_latex.html  sheet_org.html  template.html  vtimezone.html  week.html
docs/_build/html/_sources/: development.md.txt  installation.md.txt  library.md.txt
examples/: my-week.org  projects-and-tasks.org
tests/: conftest.py  test_ics.py  test_parity.py  test_sheet.py  test_writing_schedule.py
tests/fixtures/: three-projects.org
writing_schedule/: __init__.py  archive.py  cli.py  config.py  ics.py  model.py  orgtable.py  parser.py  schedule.py  sheet.py  sheet_common.py  sheet_latex.py  sheet_org.py  template.py  vtimezone.py  week.py
